--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "nativewind": "^4.1.23",
+    "pod-install": "^0.3.5",
+    "postcss": "^8.5.3",
     "react": "19.0.0",
-    "react-native": "0.79.0"
+    "react-native": "0.79.0",
+    "react-native-reanimated": "^3.17.3",
+    "react-native-safe-area-context": "^5.3.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
