--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "autoprefixer": "^10.4.21",
     "nativewind": "^4.1.23",
     "pod-install": "^0.3.5",
@@ -18,7 +20,9 @@
     "react-native": "0.79.0",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
-    "tailwindcss": "^3.4.17"
+    "react-native-screens": "^4.10.0",
+    "tailwindcss": "^3.4.17",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
